--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <picture class="hero_picture">
-                            <source srcset="/images/sushi_mobile_3.jpg" media="(width <= 480px)">
-                            <img src="/images/sushi_3.jpeg" alt="Best SEO practices" class="hero-image">
+                            <source srcset="images/sushi_mobile_3.jpg" media="(width <= 480px)">
+                            <img src="images/sushi_3.jpeg" alt="Best SEO practices" class="hero-image">
                         </picture>
                         <div class="text-content">
                             <h2>Bienvenido al sushi Sakura</h2>
@@ -39,14 +39,14 @@
                     </div>
                     <div class="swiper-slide">
                         <picture class="hero_picture">
-                            <source srcset="/images/sushi_mobile_1.jpg" media="(width <= 480px)">
-                            <img src="/images/sushi_1.jpg" alt="Best SEO practices" class="hero-image">
+                            <source srcset="images/sushi_mobile_1.jpg" media="(width <= 480px)">
+                            <img src="images/sushi_1.jpg" alt="Best SEO practices" class="hero-image">
                         </picture>
                     </div>
                     <div class="swiper-slide">
                         <picture class="hero_picture">
-                            <source srcset="/images/sushi_mobile_2.jpg" media="(width <= 480px)">
-                            <img src="/images/sushi_2.jpg" alt="Best SEO practices" class="hero-image">
+                            <source srcset="images/sushi_mobile_2.jpg" media="(width <= 480px)">
+                            <img src="images/sushi_2.jpg" alt="Best SEO practices" class="hero-image">
                         </picture>
                     </div>
                 </div>
@@ -67,19 +67,19 @@
             <h2>Nuestro menu</h2>
             <div class="menu-grid">
                 <article class="menu-item">
-                    <img src="/images/sushi1.jpeg" alt="Sushi Mix">
+                    <img src="images/sushi1.jpeg" alt="Sushi Mix">
                     <h3>Sushi mix</h3>
                     <p>Selección variada de migiris y makis</p>
                     <span class="price">20USD</span>
                 </article>
                 <article class="menu-item">
-                    <img src="/images/sushi2.jpeg" alt="Sashimi Deluxe">
+                    <img src="images/sushi2.jpeg" alt="Sashimi Deluxe">
                     <h3>Sashimi Deluxe</h3>
                     <p>Selección deluxe</p>
                     <span class="price">20USD</span>
                 </article>
                 <article class="menu-item">
-                    <img src="/images/sushi3.jpeg" alt="Sushi Premium">
+                    <img src="images/sushi3.jpeg" alt="Sushi Premium">
                     <h3>Sushi Premium</h3>
                     <p>Selección pemium</p>
                     <span class="price">20USD</span>
